--- a/submissions/blally123/index.html
+++ b/submissions/blally123/index.html
@@ -1,1 +1,15 @@
-<p>Benjamin Lally</p>
+<!DOCTYPE HTML>
+<html>
+
+    <head>
+        <title>
+            The Yo-Yo Wizard
+        </title>
+    </head>
+
+    <body>
+
+
+    </body>
+
+</html>
