May need to comeback, but HTML mostly done

--- a/submissions/blally123/index.html
+++ b/submissions/blally123/index.html
@@ -4,12 +4,74 @@
     <head>
         <title>
             The Yo-Yo Wizard
+
         </title>
     </head>
 
     <body>
+    <header>
+        <h1>The Yo-Yo Wizard</h1>
+        <img src="images/top.jpg" alt="Me out Yo-Yoing"/>
+        <nav>
+            <ul>
+                <li><a href="#How I got into Yo-Yoing">How I got into Yo-Yoing</a></li>
+                <li><a href="#Why should">Why Should Anyone Yo-Yo?</a></li>
+                <li><a href="#My Yo-Yo's">My Yo-Yo's</a></li>
+                <li><a href ="#My Future">My Future as a Yo-Yo Dude</a></li>
 
 
+
+            </ul>
+        </nav>
+    </header>
+    <main>
+        <article>
+            <section>
+                <a name="How I got into Yo-Yoing"></a>
+            <h2>How I got into Yo-Yoing</h2>
+                <p>When I was young I had played with a yo-yo here and there but never actually gained
+                    any skill at it, until my freshmen year of college. I went home for springbreak to stay with my parents and
+                    happend upon my old yo-yo -- which I hadn't touched in years -- with my newfound young-adult levels of coordination I quickly
+                    picked up on many tricks.  I soon found that getting out of bed and throwing a few yo-yo tricks was a great way to wake myself
+                    up in the morning, after those late nights of writing long lab reports.  To this day I have been actively
+                    yo-yoing for about 5 months now, so it didn't take long for me to pick it up at all.
+                </p></section>
+
+                <section>
+                    <a name="Why should"></a>
+                    <h2>Why should anyone Yo-Yo?</h2>
+                    <img = src ="images/7PMzY.gif" alt = "Victim from YoYoExpert forums"/>
+                    <p>Yo-Yoing serves as a means of physical challenge without the phyical toll or danger usually associated with that -- atleast
+                        most of the time anyways --
+                      for anybody who enjoys challenging themselves on the go with very little downtime, the Yo-Yo is a good choice.
+                  I'm not going to tell anybody that they should or should not Yo-Yo, but if you asked me I would tell you that you should
+              atleast give it a try, regardless of how dumb you may thing it is you can deny the satisfaction associated with getting
+          the object to return to your hand.</p>
+                </section>
+
+                <section>
+                    <a name="My Yo-Yo's"></a>
+            <h2>My Yo-Yo's</h2>
+
+                <img src="images/pou6Lav.jpg" alt="my yoyos"/>
+                <p>I currently have about 13 or so yo-yos, which to somebody without
+                any experience with yo-yo's may sound like large number to have, but
+                in reality a majority of people who yo-yo have quite a large collection, as each yo-yo is slightly different than one another.
+                I find them much more novel to collect than things such as trading cards, as each individual yo-yo can be played with and each yo-yo plays
+                differently from one another.</p>
+            </section>
+            <section>
+                <a name="My Future"></a>
+    <h1>My Future as a Yo-Yo Dude</h1>
+        <p>I want it to be clear that I do not ever intend on joining the circus or anything, but for the sake of having it as a hobby, I expect
+        for my yo-yo throwing to continue for years to come.  I enjoy yo-yoing for the challenge involved in learning "that next trick",
+        for the sheer difficulty involved in some yo-yo tricks it gives me great satisfaction to land my most difficult tricks cleanly.</p>
+    </section>
+
+
+    <footer>
+        <p>Created for LaunchCode's Summer of Code 2016</p>
+        <p>&copy 2016 Benjamin Lally</p></footer>
     </body>
 
 </html>
