--- a/submissions/blally123/index.html
+++ b/submissions/blally123/index.html
@@ -6,13 +6,17 @@
             The Yo-Yo Wizard
 
         </title>
+
+        <link type = "text/css" rel = "stylesheet" href= "styles.css"/>
+
     </head>
 
     <body>
     <header>
-        <h1>The Yo-Yo Wizard</h1>
-        <img src="images/top.jpg" alt="Me out Yo-Yoing"/>
-        <nav>
+        <h2>The Yo-Yo Wizard</h2>
+
+        <nav><br>
+            <h3 class = "contentText">Contents:</h3>
             <ul>
                 <li><a href="#How I got into Yo-Yoing">How I got into Yo-Yoing</a></li>
                 <li><a href="#Why should">Why Should Anyone Yo-Yo?</a></li>
@@ -23,6 +27,7 @@
 
             </ul>
         </nav>
+        <img id = "img1" src="images/top.jpg" alt="Me out Yo-Yoing"/>
     </header>
     <main>
         <article>
@@ -39,13 +44,13 @@
 
                 <section>
                     <a name="Why should"></a>
-                    <h2>Why should anyone Yo-Yo?</h2>
-                    <img = src ="images/7PMzY.gif" alt = "Victim from YoYoExpert forums"/>
+                    <h2>Why should Anyone Yo-Yo?</h2>
+                    <img id = "img2" src ="images/7PMzY.gif" alt = "Victim from YoYoExpert forums"/>
                     <p>Yo-Yoing serves as a means of physical challenge without the phyical toll or danger usually associated with that -- atleast
                         most of the time anyways --
                       for anybody who enjoys challenging themselves on the go with very little downtime, the Yo-Yo is a good choice.
                   I'm not going to tell anybody that they should or should not Yo-Yo, but if you asked me I would tell you that you should
-              atleast give it a try, regardless of how dumb you may thing it is you can deny the satisfaction associated with getting
+              atleast give it a try, regardless of how dumb you may think it is you can't deny the satisfaction associated with getting
           the object to return to your hand.</p>
                 </section>
 
@@ -53,7 +58,7 @@
                     <a name="My Yo-Yo's"></a>
             <h2>My Yo-Yo's</h2>
 
-                <img src="images/pou6Lav.jpg" alt="my yoyos"/>
+                <img id = "img3" src="images/pou6Lav.jpg" alt="my yoyos"/>
                 <p>I currently have about 13 or so yo-yos, which to somebody without
                 any experience with yo-yo's may sound like large number to have, but
                 in reality a majority of people who yo-yo have quite a large collection, as each yo-yo is slightly different than one another.
@@ -62,14 +67,15 @@
             </section>
             <section>
                 <a name="My Future"></a>
-    <h1>My Future as a Yo-Yo Dude</h1>
+    <h2>My Future as a Yo-Yo Dude</h2>
         <p>I want it to be clear that I do not ever intend on joining the circus or anything, but for the sake of having it as a hobby, I expect
         for my yo-yo throwing to continue for years to come.  I enjoy yo-yoing for the challenge involved in learning "that next trick",
         for the sheer difficulty involved in some yo-yo tricks it gives me great satisfaction to land my most difficult tricks cleanly.</p>
     </section>
+</article>
+</main>
 
-
-    <footer>
+    <footer class = "yellowBox">
         <p>Created for LaunchCode's Summer of Code 2016</p>
         <p>&copy 2016 Benjamin Lally</p></footer>
     </body>
